Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-12672

[C++] Segfault casting result of "fill_null()" (not bitmap but unknown null_count)

    XMLWordPrintableJSON

Details

    Description

      The array returned by pa.Array.fill_null() is unusable.

      >>> import pyarrow as pa
      >>> arr = pa.array([None], pa.bool_()).fill_null(False)
      >>> arr.cast(pa.int8())
      Segmentation fault (core dumped)
      

      Attachments

        Issue Links

          Activity

            People

              jorisvandenbossche Joris Van den Bossche
              adamhooper Adam Hooper
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h
                  1h