ARROW-12672: [C++] Fix fill_null kernel to set null_count + cast kernel to handle no-bitmap with unknown null_count case